--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -48,6 +48,9 @@
           </ul>
         </li>
         <li class="nav-item" routerLinkActive="active current">
+          <a class="nav-link" routerLink="/analitika">Analitika</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active current">
           <a class="nav-link" routerLink="/admin-fakture">Moje fakture</a>
         </li>
         <li class="nav-item" routerLinkActive="active current">
