--- a/src/app/components/admin/request-for-ads/request-for-ads.component.html
+++ b/src/app/components/admin/request-for-ads/request-for-ads.component.html
@@ -1,13 +1,13 @@
 <!-- JUMBOTRON -->
-<div class="container" style="margin-top: 100px;" *ngIf="neodobreneReklame.length === 0">
+<!-- <div class="container" style="margin-top: 100px;" *ngIf="neodobreneReklame.length === 0">
   <div class="jumbotron">
     <h1 class="display-4">Nema podataka za prikaz!</h1>
     <hr class="my-4">
     <p class="lead">Trenutno nema podataka za prikaz na stranici <i>Zahtevi za reklamu.</i></p>
   </div>
-</div>
+</div> -->
 
-<div class="container" style="margin-top: 100px;" id="korisnici" *ngIf="neodobreneReklame.length != 0">
+<div class="container" style="margin-top: 100px;" id="korisnici">
   <div class="row justify-content-center align-items-center inner-row">
     <div class="col-md-15">
 
