--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
       <ul *ngSwitchCase="'default'">
         <li class="nav-item" routerLinkActive="active current active">
           <a class="nav-link" routerLink="/">Pocetna</a></li>
+          <li class="nav-item" routerLinkActive="active current">
+            <a class="nav-link" routerLink="/map">Mapa</a>
+          </li>
         <li class="nav-item" routerLinkActive="active current">
           <a class="nav-link" routerLink="/login">Prijava</a></li>
         <li class="nav-item" routerLinkActive="active current">
@@ -48,6 +51,9 @@
           </ul>
         </li>
         <li class="nav-item" routerLinkActive="active current">
+          <a class="nav-link" routerLink="/map">Mapa</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active current">
           <a class="nav-link" routerLink="/analitika">Analitika</a>
         </li>
         <li class="nav-item" routerLinkActive="active current">
@@ -70,6 +76,9 @@
         </li>
         <li class="nav-item" routerLinkActive="active current">
           <a class="nav-link" routerLink="/svereklame">Sve reklame</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active current">
+          <a class="nav-link" routerLink="/map">Mapa</a>
         </li>
         <li class="nav-item" routerLinkActive="active current">
           <a class="nav-link" routerLink="/reklamnipano">Reklamni panoi</a>
