--- a/src/app/components/admin/request-for-reg/request-for-reg.component.html
+++ b/src/app/components/admin/request-for-reg/request-for-reg.component.html
@@ -1,14 +1,14 @@
 <!-- JUMBOTRON -->
-<div class="container" style="margin-top: 100px;" *ngIf="users.length === 0">
+<!-- <div class="container" style="margin-top: 100px;" *ngIf="users.length === 0">
   <div class="jumbotron">
     <h1 class="display-4">Nema podataka za prikaz!</h1>
     <hr class="my-4">
     <p class="lead">Trenutno nema podataka za prikaz na stranici <i>Zahtevi za registraciju.</i></p>
   </div>
-</div>
+</div> -->
 
 <!-- CONTENT -->
-<div class="container" style="margin-top: 100px;" id="korisnici" *ngIf="users.length != 0">
+<div class="container" style="margin-top: 100px;" id="korisnici">
   <div class="row">
     <div class="col-md-3">
         <div class="form-outline form-floating d-flex align-items-center">
