--- a/src/app/components/klijent/moje-reklame/moje-reklame.component.html
+++ b/src/app/components/klijent/moje-reklame/moje-reklame.component.html
@@ -1,12 +1,12 @@
-<div class="container" style="margin-top: 100px;" *ngIf="reklame.length === 0">
+<!-- <div class="container" style="margin-top: 100px;" *ngIf="reklame.length === 0">
   <div class="jumbotron">
     <h1 class="display-4">Nema podataka za prikaz!</h1>
     <hr class="my-4">
     <p class="lead">Trenutno nema podataka za prikaz na stranici <i>Moje reklame.</i></p>
   </div>
-</div>
+</div> -->
 
-<div class="container" style="margin-top: 100px;" *ngIf="reklame.length != 0">
+<div class="container" style="margin-top: 100px;">
   <section id="gallery">
     <div class="container">
       <div class="row">
