--- a/src/app/components/klijent/reklamnipano/reklamnipano.component.html
+++ b/src/app/components/klijent/reklamnipano/reklamnipano.component.html
@@ -1,16 +1,16 @@
 <!-- JUMBOTRON -->
-<div class="container" style="margin-top: 100px;" *ngIf="reklamniPanoi.length == 0">
+<!-- <div class="container" style="margin-top: 100px;" *ngIf="reklamniPanoi.length == 0">
   <div class="jumbotron">
     <h1 class="display-4">Nema podataka za prikaz!</h1>
     <hr class="my-4">
     <p class="lead">Trenutno nema podataka za prikaz na stranici <i>Reklamni panoi</i>.</p>
   </div>
-</div>
+</div> -->
 
-<div class="container" style="margin-top: 100px;" *ngIf="reklamniPanoi.length != 0">
+<div class="container" style="margin-top: 100px;">
   <section id="gallery">
     <div class="container">
-      <div class="row">
+      <div [formGroup]="addForm" class="row">
         <div class="col-md-3">
             <div class="form-outline form-floating d-flex align-items-center">
               <select class="form-control form-control-lg m-2" formControlName="grad" (change)="onGradChange($event)">
